--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://vzsombor0.github.io/programnyelvek.html"/>
+    <meta http-equiv="refresh" content="0; url=https://sabolcboss.github.io/justgetmethroughthisday/zd.html"/>
     <title>Redirecting</title>
 </head>
 </html>
